[package]
name = "surrealmx"
publish = true
edition = "2021"
version = "0.14.4"
readme = "CARGO.md"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "An embedded, in-memory, lock-free, transaction-based, key-value database engine"
repository = "https://github.com/surrealdb/surrealmx"
homepage = "https://github.com/surrealdb/surrealmx"
keywords = [
	"database",
	"embedded-database",
	"key-value",
	"key-value-store",
	"kv-store",
]
categories = ["database-implementations", "data-structures", "embedded"]
license = "Apache-2.0"

[dependencies]
arc-swap = "1.7.1"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = { version = "1.11", features = ["serde"] }
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3.12"
crossbeam-skiplist = "0.1.3"
lz4 = "1.28"
papaya = "0.2.3"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive", "rc"] }
smallvec = { version = "1.15.1", features = ["serde"] }
thiserror = "2.0.17"
tracing = "0.1.41"

[dev-dependencies]
rand = "0.9.2"
criterion = { version = "0.7.0", features = ["html_reports"] }
tempfile = "3.23"

[[bench]]
name = "operations"
harness = false
